SERVER-108913 Disable future chain length checking in antithesis builds (#42806)

GitOrigin-RevId: 3ea9b9dc0ae784b0067ee112fbae6d7380b2864c